tests/errors/lex12.kt
fun main() {
    val s = "hello
}